# afkcode

./: .gitignore  AGENTS.md  AGENTS_GUIDE.md  Cargo.toml  DOCS_ENHANCEMENTS.md  README.md  TESTING.md  afkcode.toml.example  example_checklist.md  smoke_test.sh  test_hello_world.md
.github/workflows/: build.yml
src/: audit.rs  cli.rs  commands.rs  config.rs  constants.rs  coordinator.rs  llm.rs  logger.rs  main.rs  parallel.rs  prompts.rs  runner.rs  verifier.rs  wakelock.rs
src/checklist/: mod.rs  scanner.rs
src/gimme/: checkout.rs  marker.rs  mod.rs  parser.rs  selector.rs
tests/: run_modes.rs
