[package]
name = "afkcode"
edition = "2024"
version = "0.1.0"

[dependencies]
anyhow = "1"
chrono = { version = "0", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
toml = "0"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
